--- a/bia/buscador/templates/buscador/home.html
+++ b/bia/buscador/templates/buscador/home.html
@@ -1,14 +1,47 @@
 {% extends "buscador/base_page.html" %}
+{% load static %}
 {% block title %}Búsqueda de Información Autómatica{% endblock %}
 {% block content %}
 <div class="note note-info">
   <h4 class="block">Contenidos en desarrollo</h4>
   <p>Hola {{ request.user.profile.full_name }}, <br>
-    En esta plataforma usted podrá buscar materiales los cuales se le presentarán en base a su perfil cognitivo. Utilice las funcionalidades activas para desplazarse por el sistema.
-    <br>Prontamente se agregarán algunas funcionalidades tales como:
-    <br>  - Nombre de Usuario personalizado
-
+    Duis mollis, est non commodo luctus, nisi erat porttitor ligula, mattis consectetur purus sit amet eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, mattis consectetur purus sit amet eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum.
+    Duis mollis, est non commodo luctus, nisi erat porttitor ligula, mattis consectetur purus sit amet eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum.
+    Duis mollis, est non commodo luctus, nisi erat porttitor ligula, mattis consectetur purus sit amet eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum.
   </p>
   <br>
 </div>
+<div class="row margin-bottom-20">
+    <div class="col-lg-3 col-md-6">
+    </div>
+    <div class="col-lg-3 col-md-6">
+        <div class="portlet light">
+            <div class="card-icon">
+                <a href="{% url 'buscador:search' %}"> <i class="icon-magnifier font-green-haze theme-font"></i></a>
+            </div>
+            <div class="card-title">
+                <span> Buscador </span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6">
+      <div class="portlet light">
+          <div class="card-icon">
+            <a href="{% url 'buscador:profile' request.user.profile.pk %}"> <i class="icon-user-follow font-red-sunglo theme-font"></i></a>
+          </div>
+          <div class="card-title">
+              <span> Mejor experiencia de Usuario </span>
+          </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6">
+
+    </div>
+</div>
+{% endblock %}
+{% block plugin_js %}
+  <script src="{% static 'buscador/layouts/global/scripts/quick-nav.min.js' %}" type="text/javascript"></script>
+{% endblock %}
+{% block plugin_css %}
+<link href="{% static 'buscador/pages/css/about.min.css' %}" rel="stylesheet" type="text/css" />
 {% endblock %}
